# secretspec

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO  devenv.nix  devenv.yaml  dist-workspace.toml  secretspec.toml  secretspec_api_outline.md
.claude/: settings.local.json
.claude/commands/: release.md
.github/workflows/: publish.yml  release.yml  test.yml
docs/: astro.config.mjs  package.json  wrangler.jsonc
docs/src/content/docs/: index.mdx  installation.md  introduction.md  quick-start.md  quick-start.mdx
docs/src/content/docs/concepts/: declarative.md  inheritance.md  overview.md  profiles.md  providers.md
docs/src/content/docs/providers/: 1password.md  bitwarden.md  dotenv.md  env.md  keyring.md  lastpass.md  onepassword.md
docs/src/content/docs/reference/: adding-providers.md  cli.md  configuration.md  providers.md
docs/src/content/docs/sdk/: rust.md
docs/src/styles/: custom.css
examples/codegen_example/: Cargo.toml  README.md  build.rs  secretspec.toml
examples/codegen_example/src/: main.rs
examples/derive/: Cargo.toml  README.md  derive.rs  secretspec.toml
examples/derive/src/: main.rs
secretspec/: Cargo.toml  README.md
secretspec-core/: Cargo.toml
secretspec-core/src/: lib.rs
secretspec-derive/: Cargo.toml
secretspec-derive/src/: lib.rs  tests.rs
secretspec-derive/tests/: compile_tests.rs  integration_test.rs  macro_expansion.rs  snapshot_tests.rs  test_macro.rs  validation_test.rs
secretspec-derive/tests/fixtures/: basic.toml  complex.toml  empty.toml  invalid_toml.txt  invalid_validation.toml  profile_inheritance.toml  profiles.toml
secretspec-derive/tests/ui/: file_not_found.rs  file_not_found.stderr  invalid_toml.rs  invalid_toml.stderr  invalid_toml_embedded.rs  invalid_toml_embedded.stderr  invalid_toml_embedded.txt  valid_generation.rs  valid_generation_embedded.toml
secretspec-tests/: Cargo.toml  build.rs
secretspec-tests/src/: lib.rs
secretspec-tests/tests/: codegen_tests.rs
secretspec-types/: Cargo.toml
secretspec-types/src/: lib.rs
secretspec/src/: config.rs  error.rs  lib.rs  secrets.rs  tests.rs  validation.rs
secretspec/src/cli/: mod.rs
secretspec/src/provider/: bitwarden.rs  dotenv.rs  env.rs  keyring.rs  lastpass.rs  macros.rs  mod.rs  onepassword.rs  tests.rs
src/: codegen.rs  error.rs  lib.rs  main.rs  secrets.rs  tests.rs
src/cli/: mod.rs
src/fixtures/auth/: secretspec.toml
src/fixtures/base/: secretspec.toml
src/provider/: dotenv.rs  env.rs  keyring.rs  lastpass.rs  mod.rs  onepassword.rs  registry.rs  tests.rs
src/storage/: dotenv.rs  env.rs  keyring.rs  mod.rs
tests/: cli-integration.sh  codegen_integration_test.rs  codegen_test.rs
tests/common/: mod.rs
tests/fixtures/configs/: minimal.toml
tests/fixtures/configs/common/: secretspec.toml
tests/fixtures/providers/dotenv/: .env
tests/integration/: cli_tests.rs  mod.rs  profile_inheritance_tests.rs  provider_tests.rs
