[workspace]
members = [".", "secretspec-derive", "secretspec-core", "examples/derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
keyring = { version = "4.0.0-rc.1", features = ["encrypted"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
directories = "5.0"
colored = "2.0"
rpassword = "7.4.0"
dotenvy = "0.15"
serde-envfile = "0.3"
inquire = "0.6"
color-eyre = "0.6"
serde_json = "1.0"
tempfile = "3.0"
http = "1.0"
url = "2.5.4"
whoami = "1.5"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"
insta = "1.34"
linkme = "0.3"
secretspec-derive = { version = "0.1.0", path = "./secretspec-derive" }
secretspec-core = { version = "0.1.0", path = "./secretspec-core" }
secretspec = { version = "0.1.0", path = ".", features = ["macros"] }

[package]
name = "secretspec"
version.workspace = true
edition.workspace = true
repository = "https://github.com/cachix/secretspec"
description = "Declarative secrets, every environment, any provider"
license = "Apache-2.0"

[lib]
name = "secretspec"
path = "src/lib.rs"

[[bin]]
name = "secretspec"
path = "src/bin/secretspec.rs"
required-features = ["cli"]

[dependencies]
clap.workspace = true
keyring.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
directories.workspace = true
colored.workspace = true
rpassword.workspace = true
dotenvy.workspace = true
serde-envfile.workspace = true
inquire.workspace = true
color-eyre.workspace = true
secretspec-derive = { workspace = true, optional = true }
secretspec-core = { version = "0.1.0", path = "./secretspec-core" }
serde_json.workspace = true
tempfile.workspace = true
http.workspace = true
url.workspace = true
whoami.workspace = true
linkme.workspace = true

[features]
default = ["macros", "cli"]
macros = ["secretspec-derive"]
cli = []

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
