[workspace]
members = ["secretspec", "secretspec-derive", "secretspec-core", "examples/derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
keyring = { version = "4.0.0-rc.1", features = ["encrypted"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
directories = "5.0"
colored = "2.0"
rpassword = "7.4.0"
dotenvy = "0.15"
serde-envfile = "0.3"
inquire = "0.6"
color-eyre = "0.6"
serde_json = "1.0"
tempfile = "3.0"
http = "1.0"
url = "2.5.4"
whoami = "1.5"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"
insta = "1.34"
linkme = "0.3"
secretspec-derive = { version = "0.1.0", path = "./secretspec-derive" }
secretspec-core = { version = "0.1.0", path = "./secretspec-core" }
secretspec = { version = "0.1.0", path = "./secretspec", features = ["macros"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
