[package]
name = "secretspec-core"
version.workspace = true
edition.workspace = true
description = "Core types and configuration for SecretSpec"
license = "Apache-2.0"
repository = "https://github.com/cachix/secretspec"

[dependencies]
serde.workspace = true
toml.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile = "3"