[package]
name = "secretspec-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
toml.workspace = true
serde.workspace = true
secretspec-types.workspace = true

[dev-dependencies]
trybuild.workspace = true
secretspec.workspace = true
insta.workspace = true
http.workspace = true
serde_json.workspace = true