[package]
name = "secretspec-derive-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "derive"
path = "derive.rs"

[dependencies]
secretspec = { path = "../../secretspec" }
secretspec-derive = { path = "../../secretspec-derive" }
serde = { workspace = true }
url = { workspace = true }